2009-02-05  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-wm-root-window.c:
	  Set _NET_WM_PID on the hidden root window.

2009-02-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.15

2009-02-03  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-client-window.c
	(mb_wm_client_window_sync_properties): Collect window attributes and
	transiency information before determining the window type. Use
	_NET_WM_WINDOW_TYPE_NORMAL type for typeless managed non-transient
	windows and for typeless override-redirect windows as the FDO wm-spec
	specifies. (This avoids the Maemoblocks crash.)

2009-02-02  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* matchbox/core/mb-window-manager.c (mb_adjust_dialog_title_position):
	  Don't make the decor dirty if the old and new positions are the same.
	* matchbox/core/mb-wm-stack.h
	* matchbox/core/mb-wm-stack.c:
	  Made mb_wm_stack_dump() more handy.

	* mb_wm_handle_root_config_notify():
	  Tell the cmgr the screen size has changed.
	* matchbox/comp-mgr/mb-wm-comp-mgr.h:
	  New virtual method screen_size_changed().
	  Warrants a version bump.
	* matchbox/comp_mgr/mb-wm-comp-mgr-clutter.c
	  (mb_wm_comp_mgr_clutter_turn_on_real):
	  Set the size of the overlay window correctly.
	  (mb_wm_comp_mgr_clutter_screen_size_changed):
	  Keep the root window, the stage and the overlay window size in sync.

2009-02-02  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_map_notify_real): Add override-redirect
	windows to the texture corruption workaround list to fix drop down
	menus and such.

2009-01-31  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/core/mb-wm-root-window.c
	(mb_wm_root_window_handle_message): Print a line when a ping reply is
	received (currently this never seems to happen).
	* matchbox/core/mb-window-manager.c (mb_wm_handle_unmap_notify): If